# Kuato

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  install.js  opencode.json  package-lock.json  package.json  pyproject.toml  setup.sh  test.js
copilot-llmem/: hooks.json  install.js  package.json  plugin.json  test.js
docs/: ANNOUNCEMENT.md  API.md  CLI.md  CONFIGURATION.md  DREAM.md  ECOSYSTEM.md  INSTALLATION.md  INTEGRATIONS.md  PROVIDERS.md  RERANKING.md  SECURITY.md
harness/: AGENTS.md  identity.md  rules.md  user.md
llmem/: __init__.py  chunking.py  cli.py  code_index.py  config.py  correction.py  deployment.py  dream.py  dream_report.py  embed.py  extract.py  hooks.py  introspect.py  metrics.py  ollama.py  paths.py  prospective.py  refs.py  registry.py  retrieve.py  review_tracker.py  session_hooks.py  store.py  taxonomy.py  test_tracker.py  url_validate.py
llmem_migrations/: 001_initial_schema.sql  002_add_hints.sql  003_register_default_types.sql  004_add_inbox.sql  005_add_code_chunks.sql  006_add_ref_types.sql  007_cleanup_dead_schema.sql  __init__.py
memory/: __init__.py  config.py  ollama.py  providers.py  url_validate.py
migrations/: 001_initial_schema.sql  002_add_hints.sql  003_register_default_types.sql  004_add_inbox.sql  005_add_code_chunks.sql  006_add_ref_types.sql  007_cleanup_dead_schema.sql  embed.go
opencode-llmem/: install.js  package-lock.json  package.json  test.js
templates/: identity.md  rules.md  user.md
tests/: conftest.py  test_adapters.py  test_chunking.py  test_cli.py  test_cli_dream.py  (+23 more)
(+89 files in other folders)
